<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    >
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/_10dp"
    android:layout_marginRight="@dimen/_10dp"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatTextView

        android:id="@+id/title"
        style="@style/title_text"
        android:layout_marginTop="@dimen/_30dp"
        android:textStyle="bold"
        android:fontFamily="@font/playfairdisplay_bold"

        android:text="@string/become_a_skin_consultant" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp250"
        android:id="@+id/ad_video"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp"

        android:src="@drawable/consultant_mage"
        android:visibility="visible"

        android:orientation="horizontal">

    </ImageView>


    <androidx.appcompat.widget.AppCompatTextView

        android:id="@+id/subtitle"
        style="@style/title_text"
        android:layout_marginTop="@dimen/_10dp"
        android:textStyle="bold"
        android:text="@string/improve_the_society_skincare_health" />

    <androidx.appcompat.widget.AppCompatTextView

        android:id="@+id/description"
        style="@style/small_text"
        android:layout_marginTop="@dimen/_30dp"
        android:text="@string/description" />


    <androidx.appcompat.widget.AppCompatTextView

        style="@style/small_text"
        android:id="@+id/subdescription1"
        android:layout_marginTop="@dimen/_30dp"
        android:textColor="@color/dark_cyan"
        android:fontFamily="@font/playfairdisplay_regular"
        android:textStyle="bold"
        android:text="@string/get_geatures" />
    <androidx.appcompat.widget.AppCompatTextView

        style="@style/small_text"
        android:layout_marginTop="@dimen/_10dp"
        android:id="@+id/subdescription2"

        android:text="@string/earn_income" />
    <androidx.appcompat.widget.AppCompatTextView

        style="@style/small_text"
        android:layout_marginTop="@dimen/_10dp"
        android:visibility="gone"

        android:text="@string/latest_trends" />
    <androidx.appcompat.widget.AppCompatTextView
        style="@style/small_text"
        android:layout_marginTop="@dimen/_10dp"
        android:visibility="gone"

        android:text="@string/participate" />

    <androidx.appcompat.widget.AppCompatTextView

        style="@style/small_text"
        android:id="@+id/terms_conditions"
        android:layout_marginTop="@dimen/_30dp"
        android:textColor="@color/dark_cyan"
        android:fontFamily="@font/playfairdisplay_regular"
        android:textStyle="bold"
        android:text="@string/terms_amp_conditions" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/terms_conditions_details"
        style="@style/small_text"
        android:layout_marginTop="@dimen/_10dp"
        android:visibility="visible"
        android:text="@string/terms_conditions" />


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:id="@+id/activate"
        android:text="@string/become_consultant"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/dark_cyan"
        android:layout_margin="@dimen/_20dp"
        />

</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>