<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/_20dp"
    android:paddingRight="@dimen/_20dp"
    android:background="@drawable/ic_bg"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatImageView

        style="@style/title_text"
        android:layout_marginTop="@dimen/_30dp"
        android:id="@+id/back"
        android:layout_gravity="left"
        android:onClick="onClick"
        android:src="@drawable/back"

        />
    <androidx.appcompat.widget.AppCompatTextView

        style="@style/title_text"
        android:layout_marginTop="@dimen/_30dp"
        android:id="@+id/title"
        android:text="@string/new_user_registration"
        />


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/small_text"
        android:layout_marginTop="@dimen/_20dp"
        android:id="@+id/subtitle"
        android:gravity="center_horizontal"
        android:text="@string/new_account_inst"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60dp"
        android:text="@string/enter_username"
        android:tag="@string/enter_username"
        android:id="@+id/username_title"
        android:fontFamily="@font/nunito_regular"
        android:textColor="@color/dark_cyan"

        android:textSize="@dimen/_15dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/etusername"
        android:background="@drawable/blue_button"
        android:hint="@string/enter_username"
        android:singleLine="true"
        android:textColor="@color/dark_cyan"
        android:inputType="text"
        android:textSize="@dimen/_15dp"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/password"
        android:id="@+id/password_title"
        android:tag="@string/password"
        android:fontFamily="@font/nunito_regular"
        android:textColor="@color/dark_cyan"

        android:textSize="@dimen/_15dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginTop="@dimen/_15dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/etPassword"
            android:textColor="@color/dark_cyan"

            android:background="@drawable/blue_button"
            android:hint="@string/enter_your_password"



            android:inputType="textPassword"

            android:textSize="@dimen/_15dp"/>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgShowPassword1"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginRight="@dimen/_10dp"
            android:padding="@dimen/_10dp"
            android:onClick="onClick"
            android:tint="@android:color/darker_gray"
            app:srcCompat="@drawable/eye" />
    </FrameLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/confirm_password"
        android:id="@+id/cPassword_title"
        android:tag="@string/confirm_password"
        android:fontFamily="@font/nunito_regular"
        android:textColor="@color/dark_cyan"

        android:textSize="@dimen/_15dp"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginTop="@dimen/_15dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/etConfirmPassword"
            android:textColor="@color/dark_cyan"

            android:background="@drawable/blue_button"
            android:hint="@string/enter_your_password"



            android:inputType="textPassword"

            android:textSize="@dimen/_15dp"/>



        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgShowPassword2"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginRight="@dimen/_10dp"
            android:padding="@dimen/_10dp"
            android:onClick="onClick"
            android:tint="@android:color/darker_gray"
            app:srcCompat="@drawable/eye" />
    </FrameLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_rectangle_25"
        android:id="@+id/signup"
        android:text="@string/create_account"
        android:onClick="onClick"
        android:textColor="@color/middle_gray"
        android:layout_margin="@dimen/_20dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/small_text"
        android:layout_marginTop="@dimen/_10dp"
        android:id="@+id/signin"
        android:onClick="onClick"
        android:text="@string/already_have_account"

        />
    <androidx.appcompat.widget.AppCompatTextView
        style="@style/small_text"
        android:layout_marginTop="@dimen/_10dp"
        android:textSize="14dp"
        android:gravity="center_horizontal"
        android:text="@string/agree_text"
        />

</androidx.appcompat.widget.LinearLayoutCompat>