<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/_20dp"
    android:paddingRight="@dimen/_20dp"
    android:background="@drawable/ic_bg"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView

        style="@style/title_text"
        android:layout_marginTop="@dimen/_30dp"
        android:id="@+id/title"
        android:text="@string/sigin_to_seca_app"
        />


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/small_text"
        android:layout_marginTop="@dimen/_20dp"
        android:id="@+id/subtitle"
        android:text="@string/type_your_password"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_password"
        android:tag="@string/enter_your_password"
        android:fontFamily="@font/nunito_regular"
        android:textColor="@color/dark_cyan"
        android:maxLines="3"
        android:id="@+id/password_title"
        android:layout_marginTop="@dimen/_100dp"
        android:singleLine="false"
        android:layout_gravity="left"
        android:textSize="@dimen/_15dp"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginTop="@dimen/_15dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/etPassword"
            android:background="@drawable/blue_button"
            android:hint="@string/enter_your_password"

            android:textColor="@color/dark_cyan"


            android:inputType="textPassword"

            android:textSize="@dimen/_15dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgShowPassword1"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginRight="@dimen/_10dp"
            android:padding="@dimen/_10dp"
            android:onClick="onClick"
            android:tint="@android:color/darker_gray"
            app:srcCompat="@drawable/eye" />
    </FrameLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:id="@+id/submit"
        android:onClick="onClick"
        android:text="@string/sign_in"
        android:textColor="@color/middle_gray"
        android:layout_margin="@dimen/_20dp"
        android:textAllCaps="false"

        />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/small_text"
        android:layout_marginTop="@dimen/_10dp"
        android:id="@+id/forgot_pwd"
        android:onClick="onClick"
        android:text="@string/forgot_password"

        />

</androidx.appcompat.widget.LinearLayoutCompat>