<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:minHeight="150dp"
    app:cardUseCompatPadding="true"
    android:gravity="center_vertical"
    android:layout_height="wrap_content">


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/p1"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:minHeight="150dp"
    android:padding="10dp"
    android:gravity="center_vertical"
    android:layout_height="wrap_content"
    >


    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="right"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/close"
        android:layout_gravity="center_horizontal"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="@dimen/_20dp"
        android:gravity="center_horizontal"
        android:text="@string/add_address"
        android:textColor="@color/black"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="left"
        android:hint="@string/please_addres"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/review"
        android:layout_gravity="center_horizontal"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:text="@string/add_city"
        android:textColor="@color/black"
        android:textSize="@dimen/_20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view1"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="left"
        android:hint="@string/please_city"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/selected_button"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

</RelativeLayout>
</androidx.cardview.widget.CardView>